small updates, kontrola ocjena, create game referee overlap logic

--- a/src/app/components/exams/add-question-modal/add-question-modal.component.scss
+++ b/src/app/components/exams/add-question-modal/add-question-modal.component.scss
@@ -211,14 +211,14 @@
       }
     }
 
+
     .cancel-btn {
-      background-color: white;
-      color: #374151;
-      border-color: #d1d5db;
+  background-color: #95a5a6;
+  color: white;
 
       &:hover:not(:disabled) {
-        background-color: #f9fafb;
-        border-color: #9ca3af;
+    background-color: #7f8c8d;
+
       }
     }
 
