--- a/src/app/components/expenses/expenses.component.html
+++ b/src/app/components/expenses/expenses.component.html
@@ -8,9 +8,9 @@
 
   <section class="content">
     <div class="page-header">
-      <h2>Putni troškovi</h2>
+      <h1>Putni troškovi</h1>
       <div class="page-actions" *ngIf="!isAdmin">
-        <button class="btn btn-primary" (click)="openModal()">Kreiraj</button>
+        <button class="btn-create" (click)="openModal()">        <i class="fas fa-plus"></i>Kreiraj</button>
       </div>
     </div>
 
