--- a/src/app/components/time-absent/time-absent-modal/time-absent-modal.component.html
+++ b/src/app/components/time-absent/time-absent-modal/time-absent-modal.component.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button class="btn btn-outline-secondary" (click)="closeModal()">Odustani</button>
+          <button class="btn btn-secondary" (click)="closeModal()">Odustani</button>
           <button 
             class="btn btn-primary" 
             [disabled]="!isFormValid() || isSubmitting"
