--- a/src/app/components/basket-rules/basket-rules.component.scss
+++ b/src/app/components/basket-rules/basket-rules.component.scss
@@ -45,7 +45,7 @@ padding: 3rem 2rem 2rem;
 }
 
 .library-title {
-  font-size: 2rem;
+  // font-size: 2rem;
   // font-weight: 300;
   color: #2c3e50;
   margin-bottom: 1rem;
