--- a/src/app/components/exams/exams.component.scss
+++ b/src/app/components/exams/exams.component.scss
@@ -216,7 +216,7 @@ padding: 3rem 2rem 2rem;
       h3 {
         margin: 0 0 0.5rem 0;
         color: #2c3e50;
-        font-size: 1.4rem;
+        // font-size: 1.4rem;
       }
 
       p {
