--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <!-- src/app/components/header/header.component.html -->
 <header class="header">
-  <img class="logo" src="assets\HKS_Logo.webp" alt="hks-logo">
+  <img class="logo" src="assets\HKS_Logo.webp" alt="hks-logo" (click)="navigateToPage('/home')">
   <h1>Hrvatski Košarkaški Savez</h1>
   <div class="user-info">
     <div class="header-buttons">
