--- a/src/app/components/time-absent/time-absent-modal/time-absent-modal.component.scss
+++ b/src/app/components/time-absent/time-absent-modal/time-absent-modal.component.scss
@@ -142,20 +142,18 @@
         }
 
         &:disabled {
-          background-color: #bdc3c7;
+          background-color: #7da8c4;
           cursor: not-allowed;
           opacity: 0.6;
         }
       }
 
-      &.btn-outline-secondary {
-        background-color: transparent;
-        color: #6c757d;
-        border: 1px solid #6c757d;
-
-        &:hover {
-          background-color: #6c757d;
-          color: white;
-        }
-      }
+      &.btn-secondary {
+  background-color: #95a5a6;
+  color: white;
+  
+  &:hover {
+    background-color: #7f8c8d;
+  }
+}
     }
