edit and create game modal updates

--- a/src/app/components/games-assigned/create-game-modal/create-game-modal.component.html
+++ b/src/app/components/games-assigned/create-game-modal/create-game-modal.component.html
@@ -153,7 +153,8 @@
 <select 
   [(ngModel)]="sudac.userId" 
   name="sudac_{{i}}"
-  class="form-control">
+  class="form-control"
+  (change)="onRefereeSelectionChange()">
   <option value="">Odaberite suca</option>
   <option *ngFor="let ref of availableSudciForIndex[i] || []" [value]="ref._id">
     {{ ref.name }} {{ ref.surname }}
@@ -189,16 +190,16 @@
     </span>
   </h3>
   <div class="referee-assignment">
-    <select 
-      [(ngModel)]="selectedReferees.delegat" 
-      name="delegat"
-      class="form-control">
-      <option value="">Odaberite delegata</option>
-      <!-- USE STORED ARRAY INSTEAD OF METHOD -->
-      <option *ngFor="let ref of availableDelegati" [value]="ref._id">
-        {{ ref.name }} {{ ref.surname }}
-      </option>
-    </select>
+<select 
+  [(ngModel)]="selectedReferees.delegat" 
+  name="delegat"
+  class="form-control"
+  (change)="onRefereeSelectionChange()">
+  <option value="">Odaberite delegata</option>
+  <option *ngFor="let ref of availableDelegati" [value]="ref._id">
+    {{ ref.name }} {{ ref.surname }}
+  </option>
+</select>
   </div>
 </div>
 
@@ -214,16 +215,16 @@
     <div *ngFor="let pomocni of selectedReferees.pomocniSudci; let i = index" class="referee-assignment">
       <label>Pomoćni Sudac {{ pomocni.position }}</label>
       <div class="assignment-row">
-        <select 
-          [(ngModel)]="pomocni.userId" 
-          name="pomocni_{{i}}"
-          class="form-control">
-          <option value="">Odaberite pomoćnog suca</option>
-          <!-- USE STORED ARRAY INSTEAD OF METHOD -->
-          <option *ngFor="let ref of availablePomocniSudciForIndex[i] || []" [value]="ref._id">
-            {{ ref.name }} {{ ref.surname }}
-          </option>
-        </select>
+<select 
+  [(ngModel)]="pomocni.userId" 
+  name="pomocni_{{i}}"
+  class="form-control"
+  (change)="onRefereeSelectionChange()">
+  <option value="">Odaberite pomoćnog suca</option>
+  <option *ngFor="let ref of availablePomocniSudciForIndex[i] || []" [value]="ref._id">
+    {{ ref.name }} {{ ref.surname }}
+  </option>
+</select>
         <button 
           type="button" 
           class="btn btn-danger btn-sm" 
